Add 'DELETE /tables/:name/objects/:objectId:/events/:timestamp'.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,12 @@
-# Event Endpoints
-DELETE /tables/:name/objects/:oid/events/:timestamp
+* Add ending state at the beginning of event list (for optimizing appends).
+* Split off separate servlet channels.
+* New Repository: go-luajit
+* Generate header.
+* Pass in LevelDB iterator to C.
+* Find pure lua msgpack implementation.
+* Move over cursor.c, minipack, 
+
 
 # Query Endpoints
 POST   /tables/:name/query
+
