Add base query codegen.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
-* Query generation
+* Query codegen.
 * Factors
 
 * Add ending state at the beginning of event list (for optimizing appends).
 * Create command line interface to server.
+
+* TEST!
