Add query condition codegen.

--- a/TODO
+++ b/TODO
@@ -3,5 +3,7 @@
 
 * Add ending state at the beginning of event list (for optimizing appends).
 * Create command line interface to server.
+* Validate expression!
+
 
 * TEST!
