--- a/TODO
+++ b/TODO
@@ -1,8 +1,4 @@
 * Factors
+* CLI
 
 * Add ending state at the beginning of event list (for optimizing appends).
-* Create command line interface to server.
-* Validate expression!
-
-
-* TEST!
