Add non-sessionized funnel analysis.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
+* Refactor action/object to transient/permanent.
 * Factors
 * CLI
-
+* Benchmark
 * Add ending state at the beginning of event list (for optimizing appends).
+
+* Bookmark support?
