--- a/TODO
+++ b/TODO
@@ -2,3 +2,6 @@
 * Benchmark
 * Add ending state at the beginning of event list (for optimizing appends).
 * Bookmark support
+
+* GET /tables
+* GET /tables/{name}
