--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+* Add 'fields' to condition.
+* sky.rb
+* sky.go
 * Benchmark
 * Add ending state at the beginning of event list (for optimizing appends).
 * Bookmark support
