--- a/TODO
+++ b/TODO
@@ -2,7 +2,6 @@
 * Add ending state at the beginning of event list (for optimizing appends).
 * Bookmark support
 
-* GET /tables
 * GET /tables/{name}
 
-* sky.go
+* Go client
